2006-06-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: remove unused variable
	* src/Editors/_EditPlace.py: Allow duplicate names
	* src/Editors/_EditFamily.py: improve error message

2006-06-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: handle witness ref properly

2006-06-22  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_RelationshipPathBetweenBookmarks.py:
	Add new module.
	* src/Filters/Rules/Person/Makefile.am (pkgdata_PYTHON): Ship new
	module.
	* src/Filters/Rules/Person/__init__.py: Import new module.
	* src/GrampsDb/_WriteGedcom.py (GedcomWriter.__init__): Typo.

2006-06-21  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: Don't attempt to be too clever and
	swap families if a duplicate is found. Just warn, and continue.

2006-06-21  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
	* src/DisplayTabs/_GalleryTab.py (GalleryTab.build_interface):
	Properly add icon list.
	* src/Selectors/_BaseSelector.py (BaseSelector.add_columns): Allow
	resize-able columns.
	* src/plugins/DumpGenderStats.py: Allow column sorting.
	* src/ListModel.py: Allow column sorting.

2006-06-21  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: import QuestionDialog
	* src/Editors/_EditFamily.py: re-enable disabled blocks after
	the + is clicked

2006-06-21  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Plugins.py (PluginDialog.on_apply_clicked,
	PluginDialog.on_node_selected): Pass and use require_active flag.
	* src/DateEdit.py (DateEditorDialog.__init__): Take care of
	deleting the dialog.

2006-06-21  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: fix sets
	* src/Filters/__init__.py: include new build_filter_model
	* src/Filters/_FilterMenu.py: build_filter_model
	* src/Filters/Rules/Person/_MatchesFilter.py: handle custom and
	system models properly
	* src/Filters/_PersonSidebarFilter.py: add custom filter menu
